# mlops-nginx-exam-2

./: Makefile  docker-compose.yml  notes.txt  pyproject.toml
deployments/nginx/: Dockerfile  nginx.conf
src/api/: requirements.txt
src/api/v1/: Dockerfile
src/api/v2/: Dockerfile
